apps/base/couchdb/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb
  namespace: couchdb
  annotations:
    traefik.ingress.kubernetes.io/headers: |
      browserXssFilter: true
      contentTypeNosniff: true
      forceSTSHeader: true
      stsIncludeSubdomains: true
      stsPreload: true
      stsSeconds: 31536000
      customFrameOptionsValue: "SAMEORIGIN"
      contentSecurityPolicy: "default-src 'self'; script-src 'self'"
      referrerPolicy: "strict-origin-when-cross-origin"
      permissionsPolicy: "camera=(), microphone=(), geolocation=()"
spec:
  rules:
    - host: "couchdb.leotsgo.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb
                port:
                  number: 5984
  tls:
    - hosts:
        - "couchdb.leotsgo.dev"
